# student-performance-warehouse

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample/: courses.csv  grades.csv  schools.csv  students_v1.csv  students_v2.csv
docker/: Dockerfile
metabase/: setup.py
scripts/: generate_seeds.py
sql/analytics/: views.sql
sql/ddl/: 01_schemas.sql  02_extensions.sql  03_dimensions.sql  04_facts.sql
src/student_warehouse/: __init__.py  cli.py  config.py  ddl.py  loader.py
tests/: conftest.py
tests/integration/: test_loader.py
tests/unit/: test_config.py  test_helpers.py
