[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "student-performance-warehouse"
version = "0.1.0"
description = "Star-schema PostgreSQL warehouse for the UCI Student Performance dataset, with SCD2 student dimension, idempotent Python loader, and a Metabase dashboard."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Wassim Fayala", email = "wassimfayala2@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "polars>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",
]

[project.scripts]
student-warehouse = "student_warehouse.cli:app"

[project.urls]
Homepage = "https://github.com/wxssxm/student-performance-warehouse"

[tool.hatch.build.targets.wheel]
packages = ["src/student_warehouse"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: requires a real Postgres connection (CI provides one)",
]

[tool.coverage.run]
source = ["src/student_warehouse"]
branch = true
omit = ["*/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
